@@ -996,17 +996,6 @@
 	</varlistentry>
         <varlistentry>
 	  <term>
-	    <option>rotang</option>
-	  </term>
-	  <listitem>
-	    <para>Camera rotational angle. This value is angle between X axis
-	    and north direction on image plate. ROTANG is also affected by
-	    telescope flip and derotator setting, so for definite value either
-	    see rts2-mon or ROTANG entry in the FITS headers.</para>
-	  </listitem>
-	</varlistentry>
-        <varlistentry>
-	  <term>
 	    <option>xoa</option>
 	  </term>
 	  <listitem>
@@ -1023,16 +1012,6 @@
 	    <para>Y Optical Axis ofset in pixels. This value describes where on
 	    which CCD pixel is located telescope optical axis. Can be a float
 	    value. Defaults to half of the Y detector pixel size.</para>
-	  </listitem>
-	</varlistentry>
-       <varlistentry>
-	  <term>
-	    <option>flip</option>
-	  </term>
-	  <listitem>
-	    <para>Camera flip. If north is along positive X axis, flip is 0
-	    when west is along positive Y axis, and 1 if west is along negative
-	    Y axis. Defaults to 1.</para>
 	  </listitem>
 	</varlistentry>
         <varlistentry>
