@@ -258,11 +258,6 @@ yplate = 4.7
 ; Defaults to half of the Y detector pixel size.
 ; yoa = xxxx
 
-; Camera flip. If north is along positive X axis, flip is 0 when west is along positive Y axis,
-; and 1 if west is along negative Y axis.
-; Defaults to 1.
-; flip = 1
-
 precission_exposure = 20
 
 ; Minimal value for good flat image.
