@@ -1,6 +1,9 @@
 0.7.5
 =====
 
+2009-04-19
+ * removed flip from rts2.ini, as it is now stored directly in camera
+
 2009-04-18
  * fixed architecture issues (use ntohs, htons,..)
 
